[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"
async-std = "1.13.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
flate2 = "1.1.1"                             # error handling
